<resources>
    <string name="app_name">Lanchonete App</string>
    <string name="text_get_start">Iniciar</string>
    <string name="txt_tv_login">Login</string>
    <string name="login_tv_login">Acessar</string>
    <string name="login_tv_user">Usuário</string>
    <string name="login_tv_password">Senha</string>
    <string name="login_btn_forget_password">Esqueceu a senha</string>
    <string name="login_btn_register">Cadastre</string>
    <string name="login_btn_login">Entrar</string>
    <string name="register_tv_register">Registre</string>
    <string name="register_tv_email">Email</string>
    <string name="register_btn_login">Já é membro? Acesse</string>
    <string name="register_btn_create">Registrar</string>
    <string name="recover_tv_recover">Recuperar</string>
    <string name="recover_btn_recover">Recuperar</string>
    <string name="title_ic_home">início</string>
    <string name="title_ic_cart">carrinho</string>
    <string name="title_ic_settings">configurações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_ic_history">history</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_txt_logged">PERMANECER CONECTADO</string>
    <string name="settings_sw_night_mode">Modo noturno</string>
    <string name="hint_tf_language">Idioma</string>
    <string name="text_tv_preferences">Preferências</string>
    <string name="tv_password_user">Senha:</string>
    <string name="tv_user_name">Nome:</string>
    <string name="setting_btn_logout">Sair</string>
    <string name="insert_photo">Inserir foto</string>
    <string name="upload_image">carregar foto</string>
    <string name="text_tv_info">Informações</string>
    <string name="text_subtract">-</string>
    <string name="text_sum">+</string>


    <string-array name="languages">
        <item>English</item>
        <item>Turkish</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>German</item>
    </string-array>
</resources>