<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        tools:layout_editor_absoluteX="36dp"
        android:layout_marginStart="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_tv_register"
            android:textColor="@color/red"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login_tv_user"
            android:textColor="@color/red"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tf_user"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:backgroundTint="@color/red"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_tv_email"
            android:textColor="@color/red"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tf_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:backgroundTint="@color/red"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_password"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tf_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:backgroundTint="@color/red"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="684dp"
        android:background="@android:color/transparent"
        android:text="@string/register_btn_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn_create"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/red"
        android:elevation="2dp"
        android:text="@string/register_btn_create"
        android:textColor="@color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toEndOf="@+id/register_btn_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>