<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614"
        tools:layout_editor_absoluteX="36dp"
        android:layout_marginStart="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recover_tv_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover_tv_recover"
            android:textSize="36sp"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recover_tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login_tv_user"
            android:textColor="@color/red"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recover_tf_user"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:backgroundTint="@color/red"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recover_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_tv_email"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recover_tf_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:backgroundTint="@color/red"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recover_btn_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="676dp"
        android:background="@android:color/transparent"
        android:text="@string/login_tv_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recover_btn_recover"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/red"
        android:elevation="2dp"
        android:text="@string/recover_btn_recover"
        android:textColor="@color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toEndOf="@+id/recover_btn_access"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>